tests/snapshots/unexpected_eof__statement_without_dot.snap
---
source: tests/unexpected_eof.rs
expression: stderr

---
error: expected `.`, found end of file
      |
    1 | please initialize variable x as Integer with the value of 1
      |                                                            ^

